# nilabels

./: .coveragerc  .gitignore  .travis.yml  AUTHOR  CONTRIBUTE.md  README.md  README.rts  definitions.py  nose_coverage.txt  pyproject.toml  requirements.txt  setup.py  todo_list.txt
.circleci/: config.yaml  config.yml
BrainWebDataset/: README.md  a_params.py  b_raw_to_nifti.py  c_get_subset_labels.py
LABelsToolkit/: main.py
examples/: a_generate_headlike_phantoms.py  a_generate_phantoms_for_examples.py  basic_example.py  basic_example_paths.py  caliber_usage_distances_example.py  caliber_usage_example.py  generate_data_examples.py  generate_headlike_phantoms.py  generate_images_examples.py  icv_estimation_example.py  label_fusion_examples.py  manipulator_example.py  open_segmentations_in_freeview.py  open_segmentations_in_fsl.py  prototype_check_imperfections.py  prototype_clean_a_segmentation.py  prototype_open_segmentations_in_freeview.py  prototype_segment_an_image.py  prototype_symmetrise_a_segmentation.py  simple_label_fusion.py  simple_relabelling_example.py  symmetrise_a_segmentation.py
labels_manager/: main.py
labels_managers/: main.py
nilabel/: main.py
nilabels/: __init__.py  definitions.py  defs.py  main.py
tests/: test_auxiliary_methods.py  test_caliber_distances.py  test_caliber_measurements.py  test_caliber_segmentation_analyzer.py  test_caliber_volumes_and_values.py  test_colour_conversion.py  test_colour_rgb.py  test_descriptions_tools.py  test_descriptors.py  test_detection.py  test_distance_from_trusted_label.py  test_icv.py  test_label_manager.py  test_labels_checker.py  test_labels_cleaner.py  test_labels_descriptor_manager.py  test_labels_descriptor_tools.py  (+9 more)
(+246 files in other folders)
